[gd_scene load_steps=5 format=2]

[ext_resource path="res://Skeleton/Skeleton.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 64 )

[sub_resource type="CircleShape2D" id=3]
radius = 288.444

[node name="Skeleton" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 160.0 ],
"_edit_vertical_guides_": [ 352.0 ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 2 )

[node name="AreaVision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaVision"]
shape = SubResource( 3 )

[node name="TimerAttack" type="Timer" parent="."]
[connection signal="area_entered" from="AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="AreaVision" to="." method="_on_Area_Vision_body_entered"]
[connection signal="body_exited" from="AreaVision" to="." method="_on_Area_Vision_body_exited"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
